[package]
name = "async-compat"
version = "0.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"

[dependencies]
futures-core = "0.3.5"
futures-io = "0.3.5"
once_cell = "1.4.1"
pin-project-lite = "0.1.7"
tokio = { version = "0.2.22", default-features = false, features = ["rt-core"] }

[dev-dependencies]
blocking = "0.5.2"
futures = "0.3.5"
reqwest = "0.10.8"
tokio = { version = "0.2.22", default-features = false, features = ["rt-core", "io-std", "io-util", "macros"] }
warp = "0.2.4"
