[package]
name = "async-compat"
version = "0.1.1"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Compatibility adapter between tokio and futures"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/async-compat"
homepage = "https://github.com/stjepang/async-compat"
documentation = "https://docs.rs/async-compat"
keywords = ["tokio", "futures", "convert", "context"]
categories = ["asynchronous"]
readme = "README.md"

[dependencies]
futures-core = "0.3.5"
futures-io = "0.3.5"
once_cell = "1.4.1"
pin-project-lite = "0.1.7"
tokio = { version = "0.2.22", default-features = false, features = ["rt-core"] }

[dev-dependencies]
blocking = "0.5.2"
futures = "0.3.5"
reqwest = "0.10.8"
tokio = { version = "0.2.22", default-features = false, features = ["rt-core", "io-std", "io-util", "macros"] }
warp = "0.2.4"
